# advent-of-code

2023/: 1.1.rs
2023/01/1/: 1.go
2023/01/2/: 2.go
2023/02/1/: 1.go
2023/02/2/: 2.go
2023/03/1/: 1.go
2023/03/2/: 2.go
2024/: Cargo.toml
2024/01/: 1.rs  2.rs
2024/02/: 1.rs  2.rs
2024/03/: 1.rs  2.rs
2024/04/: 1.rs  2.rs
2024/05/: 1.rs  2.rs
2024/06/: 1.rs  2.rs
2024/07/: 1.rs  2.rs
2024/08/: 1.rs  2.rs
2024/09/: 1.rs
2024/1/: 1.rs  2.rs
2024/1-1/: 1-1.rs
2024/1-2/: 1-2.rs
2024/10/: 1.rs  2.rs
2024/10-1/: 10-1.rs
2024/10-2/: 10-2.rs
2024/11/: 1.rs  2.rs
2024/12/: 1.rs
2024/13/: 1.rs  2.rs
2024/13-1/: 2-1.rs
2024/14/: 1.rs  2.rs
2024/15/: 1.rs  puzzle.txt
2024/16/: 1.rs
2024/2/: 1.rs  2.rs
2024/2-1/: 2-1.rs
2024/2-2/: 2-2.rs  input.txt
2024/21/: 1.rs
2024/3/: 1.rs  2.rs
2024/3-1/: 3-1.rs
2024/3-2/: 3-2.rs
2024/4/: 1.rs  2.rs
2024/4-1/: 4-1.rs  puzzle-1.txt
2024/4-2/: 4-2.rs
2024/5/: 1.rs  2.rs
2024/5-1/: 5-1.rs  input-teste.txt
2024/5-2/: 5-2.rs  input-teste.txt
2024/6/: 1.rs  2.rs
2024/6-1/: 6-1.rs
2024/6-2/: 6-2-old.rs  6-2.rs
2024/7/: 7-2-old.rs
2024/7-1/: 7-1.rs
2024/7-2/: 7-1.rs  7-2.rs
2024/8/: 1.rs  2.rs  8-1-old.rs
2024/8-1/: 8-1.rs  input-3.txt  input.txt
2024/8-2/: 8-2.rs
2024/9-1/: 9-1.rs  input-teste0.txt
2024/9-2/: 9-2.rs
2025/01/: 1.sh  2.sh
2025/02/: 1.sh  2.sh
2025/03/: 1.sh  2-show.sh  2.sh
2025/04/: 1-dev.sh  1.sh  dev.txt
2025/05/: 2-a.sh  2-b.sh  2.sh  dev.txt
2025/06/: 1.sh  2.sh
2025/07/: 1.sh  2.sh  dev.txt
2025/08/: 1.sh  2.sh  dev.txt
2025/09/: 1.sh  2.sh  dev.txt
2025/10/: 1.sh  2.sh
2025/11/: 1.sh  2.sh
2025/12/: 1.sh  puzzle.txt
