[package] 
name = "AdventOfCode" 
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "1-1"
path = "1/1.rs"

[[bin]]
name = "1-2"
path = "1/2.rs"

[[bin]]
name = "2-1"
path = "2/1.rs"

[[bin]]
name = "2-2"
path = "2/2.rs"

[[bin]]
name = "3-1"
path = "3/1.rs"

[[bin]]
name = "3-2"
path = "3/2.rs"

[[bin]]
name = "4-1"
path = "4/1.rs"

[[bin]]
name = "4-2"
path = "4/2.rs"

[[bin]]
name = "5-1"
path = "5/1.rs"

[[bin]]
name = "5-2"
path = "5/2.rs"

[[bin]]
name = "6-1"
path = "6/1.rs"

[[bin]]
name = "6-2"
path = "6/2.rs"

[[bin]]
name = "7-1"
path = "7/1.rs"

[[bin]]
name = "7-2"
path = "7/2.rs"

[[bin]]
name = "8-1"
path = "8/1.rs"

[[bin]]
name = "8-2"
path = "8/2.rs"

[[bin]]
name = "9-1"
path = "9/1.rs"

[[bin]]
name = "9-2"
path = "9/2.rs"

[[bin]]
name = "10-1"
path = "10/1.rs"

[[bin]]
name = "10-2"
path = "10/2.rs"

[[bin]]
name = "11-1"
path = "11/1.rs"

[[bin]]
name = "11-2"
path = "11/2.rs"

[[bin]]
name = "12-1"
path = "12/1.rs"

[[bin]]
name = "12-2"
path = "12/2.rs"

[[bin]]
name = "13-1"
path = "13/1.rs"

[[bin]]
name = "13-2"
path = "13/2.rs"

[[bin]]
name = "14-1"
path = "14/1.rs"

[[bin]]
name = "14-2"
path = "14/2.rs"

[[bin]]
name = "15-1"
path = "15/1.rs"

[[bin]]
name = "15-2"
path = "15/2.rs"

[[bin]]
name = "16-1"
path = "16/1.rs"

[[bin]]
name = "16-2"
path = "16/2.rs"

[[bin]]
name = "17-1"
path = "17/1.rs"

[[bin]]
name = "17-2"
path = "17/2.rs"

[[bin]]
name = "18-1"
path = "18/1.rs"

[[bin]]
name = "18-2"
path = "18/2.rs"

[[bin]]
name = "19-1"
path = "19/1.rs"

[[bin]]
name = "19-2"
path = "19/2.rs"

[[bin]]
name = "20-1"
path = "20/1.rs"

[[bin]]
name = "20-2"
path = "20/2.rs"

[[bin]]
name = "21-1"
path = "21/1.rs"

[[bin]]
name = "21-2"
path = "21/2.rs"

[[bin]]
name = "22-1"
path = "22/1.rs"

[[bin]]
name = "22-2"
path = "22/2.rs"

[[bin]]
name = "23-1"
path = "23/1.rs"

[[bin]]
name = "23-2"
path = "23/2.rs"

[[bin]]
name = "24-1"
path = "24/1.rs"

[[bin]]
name = "24-2"
path = "24/2.rs"

[[bin]]
name = "25-1"
path = "25/1.rs"

[[bin]]
name = "25-2"
path = "25/2.rs"
